syntax = "proto3";

package ncreep.from_grpc.proto;

message Done {}

message VacationReport {
  string name = 1;
  int32 days = 2;
  bool sickLeave = 3;
}

service VacationReportService {
  rpc submitReports (stream VacationReport) returns (Done);
}
